// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders "Not logged in" correctly 1`] = `
"<Fragment>
  <Blueprint3.Navbar className=\\"NavigationBar primary-navbar bp3-dark\\">
    <Blueprint3.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/academy\\">
        <Blueprint3.Icon icon=\\"symbol-diamond\\" />
        <Blueprint3.NavbarHeading style={{...}}>
          Source Academy
        </Blueprint3.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/sourcecast\\">
        <Blueprint3.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/playground\\">
        <Blueprint3.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/githubassessments/missions\\">
        <Blueprint3.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          GitHub Assessments
        </div>
      </NavLink>
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup align=\\"right\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/contributors\\">
        <Blueprint3.Icon icon=\\"heart\\" />
        <div className=\\"navbar-button-text hidden-sm hidden-xs\\">
          Contributors
        </div>
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint3.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} name={[undefined]} />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
  <Switch>
    <Route path=\\"/githubassessments\\">
      <GitHubAssessmentsNavigationBar handleLogOut={[Function: handleLogOut]} handeGitHubLogIn={[Function: handeGitHubLogIn]} handleGitHubLogOut={[Function: handleGitHubLogOut]} title=\\"Source Academy\\" />
    </Route>
    <Route />
  </Switch>
</Fragment>"
`;

exports[`NavigationBar renders correctly with student role 1`] = `
"<Fragment>
  <Blueprint3.Navbar className=\\"NavigationBar primary-navbar bp3-dark\\">
    <Blueprint3.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/academy\\">
        <Blueprint3.Icon icon=\\"symbol-diamond\\" />
        <Blueprint3.NavbarHeading style={{...}}>
          Source Academy
        </Blueprint3.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/sourcecast\\">
        <Blueprint3.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/playground\\">
        <Blueprint3.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/githubassessments/missions\\">
        <Blueprint3.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          GitHub Assessments
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/achievement\\">
        <Blueprint3.Icon icon=\\"mountain\\" />
        <div className=\\"navbar-button-text\\">
          Achievement
        </div>
      </NavLink>
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup align=\\"right\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/contributors\\">
        <Blueprint3.Icon icon=\\"heart\\" />
        <div className=\\"navbar-button-text hidden-sm hidden-xs\\">
          Contributors
        </div>
      </NavLink>
      <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      <Blueprint3.Tooltip2 content=\\"Toggle Menu\\" placement=\\"bottom\\" hoverCloseDelay={0} hoverOpenDelay={100} minimal={false} transitionDuration={100}>
        <Blueprint3.Button onClick={[Function: onClick]} icon=\\"compass\\" minimal={true} style={{...}} />
      </Blueprint3.Tooltip2>
      <div className=\\"visible-xs\\">
        <Blueprint3.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} name={[undefined]} />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
  <Switch>
    <Route path=\\"/githubassessments\\">
      <GitHubAssessmentsNavigationBar handleLogOut={[Function: handleLogOut]} handeGitHubLogIn={[Function: handeGitHubLogIn]} handleGitHubLogOut={[Function: handleGitHubLogOut]} title=\\"Source Academy\\" role=\\"student\\" />
    </Route>
    <Route>
      <AcademyNavigationBar role=\\"student\\" />
    </Route>
  </Switch>
</Fragment>"
`;
